--- a/styleHome.css
+++ b/styleHome.css
@@ -1,12 +1,17 @@
 /*----------------GENERAL --------------------*/
+
+
+
+
 .flex{
     display: flex;
     flex-wrap: wrap;
 }
 body{
     background-color:#272829 ;
-    color:  #BBBBBB
+    color:  #BBBBBB;
 }
+
 /*----------------HEADER --------------------*/
 
 header{
@@ -33,5 +38,22 @@ header{
     text-align: center;
 }
 
-/*----------------IndexHome --------------------*/
+/*----------------PAGE 2 --------------------*/
 /*------Body Page2 ----*/
+
+body{
+    width: 100%;
+    text-align: center;
+}
+h2{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2.6rem;
+    display: flex;
+}
+.about{
+  
+    padding: 100px;
+}
+.mail{
+    font-size: 2.5rem;
+}
